[gd_scene load_steps=10 format=3 uid="uid://y6f8emc37xj"]

[ext_resource type="Script" path="res://ui/pause/pause_menu.gd" id="1_0v1ua"]
[ext_resource type="Texture2D" uid="uid://bfaqocwsfn10s" path="res://ui/pause/art/pause.png" id="2_duh3a"]
[ext_resource type="Texture2D" uid="uid://5ljgi6mogaok" path="res://ui/pause/art/audioOff.png" id="3_ftps7"]
[ext_resource type="Texture2D" uid="uid://cy0oobd24l5m4" path="res://ui/pause/art/audioOn.png" id="3_uq12u"]
[ext_resource type="Texture2D" uid="uid://cnia1j456q0j0" path="res://ui/pause/art/musicOn.png" id="4_4mnlp"]
[ext_resource type="Texture2D" uid="uid://brx3ek1px43r6" path="res://ui/pause/art/musicOff.png" id="5_rliuk"]
[ext_resource type="Texture2D" uid="uid://xxo4blq63jk0" path="res://ui/pause/art/power.png" id="7_btia1"]

[sub_resource type="LabelSettings" id="LabelSettings_7o654"]
font_size = 24
shadow_color = Color(0.176419, 0.176419, 0.176419, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_7uaaj"]
font_size = 36
shadow_color = Color(0.176419, 0.176419, 0.176419, 1)
shadow_offset = Vector2(2, 2)

[node name="PauseMenu" type="CanvasLayer" node_paths=PackedStringArray("_pause_menu", "_sfx_button", "_music_button")]
process_mode = 3
script = ExtResource("1_0v1ua")
_pause_menu = NodePath("MarginContainer2")
_sfx_button = NodePath("MarginContainer2/VBoxContainer/SFXButton")
_music_button = NodePath("MarginContainer2/VBoxContainer/MusicButton")
_sfx_on_texture = ExtResource("3_uq12u")
_sfx_off_texture = ExtResource("3_ftps7")
_music_on_texture = ExtResource("4_4mnlp")
_music_off_texture = ExtResource("5_rliuk")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 240.0
grow_horizontal = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 70

[node name="PauseButton" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("2_duh3a")

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 400.0
offset_top = -177.0
offset_right = 400.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="SFXButton" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("3_uq12u")

[node name="MusicButton" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("4_4mnlp")

[node name="Control" type="Control" parent="MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Music by:"
label_settings = SubResource("LabelSettings_7o654")
horizontal_alignment = 2

[node name="Label2" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "LÃ¡zaro Menezes"
label_settings = SubResource("LabelSettings_7uaaj")
horizontal_alignment = 2

[node name="LinkButton" type="LinkButton" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.0496, 0.07564, 0.31, 1)
theme_override_font_sizes/font_size = 24
text = "@lazarodm.com.br"
uri = "https://bsky.app/profile/lazarodm.com.br"

[node name="Control2" type="Control" parent="MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture_normal = ExtResource("7_btia1")

[connection signal="pressed" from="MarginContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/SFXButton" to="." method="_on_sfx_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
